# IGNITE-843 Add comment for docker file, remove 'ignite-version' field.

--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -45,7 +45,7 @@ block content
                     li(ng-class="{active: cfgLang=='java'}")
                         a(href, ng-click='setCfgLang("java")') Java
                     li(ng-class="{active: cfgLang=='docker'}")
-                        a(href, ng-click='setCfgLang("docker")') Docker
+                        a(href, ng-click='setCfgLang("docker")') Dockerfile
 
                 div(style='padding-top: 10px')        
                     #xmlResult(ng-show="cfgLang == 'xml'")
@@ -57,19 +57,17 @@ block content
                             | {{resultJava}}
                     
                     #dockerResult(ng-show="cfgLang == 'docker'")
+                        p
+                            a(href='https://docs.docker.com/reference/builder') Dockerfile
+                            |  is a text file with instructions to create Docker image. To build image you have to
+                            | store following Docker file with your xml ignite configurations to the same directory. 
+                        
                         form.form-horizontal
                             .form-group
                                 label.control-label.col-sm-3(for='os') Operation System
                                 .col-sm-6
                                     input#os.form-control(type='text', ng-model='dockerArg.os', data-provide="typeahead",
                                     placeholder='Enter OS version', data-source='["debian:8", "ubuntu:12.04"]')
-                                
-                            .form-group
-                                label.control-label.col-sm-3(for='igniteVersion') Ignite version
-                                .col-sm-6
-                                    select#igniteVersion.form-control(ng-model='dockerArg.igniteVersion')
-                                        option(value='1.1.0') 1.1.0
-                                        option(value='1.0.0') 1.0.0
                                 
                             .form-group
                                 textarea.form-control(rows=30, readonly=true)
