# ignite-843 Fixed script include.

--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -19,6 +19,7 @@ extends layout-sidebar
 append scripts
     script(src='/javascripts/controllers/summary.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
         
 block content
     .docs-header
