# IGNITE-843 Use syntax highlighter from http://apacheignite.readme.io.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -960,6 +960,7 @@ input.ng-invalid {
   pointer-events: initial;
 }
 
-.generatedResult {
-  height: 400px;
+.syntaxhighlighter {
+  padding: 10px 5px;
+  border-radius: 6px;
 }
