--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -18,8 +18,14 @@ extends layout-sidebar
 
 append scripts
     script(src='/javascripts/controllers/summary.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.1.9/ace.js')
+    script(src='/javascripts/syntaxHighlighter/shCore.js')    
+    script(src='/javascripts/syntaxHighlighter/shBrushXml.js')    
+    script(src='/javascripts/syntaxHighlighter/shBrushJava.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
+        
+append css
+    link(rel='stylesheet', href='/stylesheets/shCore.css')
+    link(rel='stylesheet', href='/stylesheets/shThemeMidnight.css')
         
 block content
     .docs-header
@@ -53,7 +59,7 @@ block content
                     #xmlResult(ng-show="cfgLang == 'xml'")
                         .panel.panel-default
                             .panel-body
-                                #xmlResultEditor.generatedResult
+                                #xmlResult
                 
                     #javaResult(ng-show="cfgLang == 'java'")
                         div(style="padding-bottom: 10px")
@@ -63,7 +69,7 @@ block content
                         
                         .panel.panel-default
                             .panel-body
-                                #javaResultEditor.generatedResult
+                                #javaResult
                     
                     #dockerResult(ng-show="cfgLang == 'docker'")
                         p
