# IGNITE-843 Fix OS selection

--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -76,8 +76,7 @@ block content
                             .form-group
                                 label.control-label.col-sm-3(for='os') Operation System
                                 .col-sm-6
-                                    input#os.form-control(type='text', ng-model='dockerArg.os', data-provide="typeahead",
-                                    placeholder='Enter OS version', data-source='["debian:8", "ubuntu:12.04"]')
+                                    input#os.form-control(type='text', ng-model='dockerArg.os', placeholder='debian:8')
                                 
                             .form-group
                                 | Download as 
