# IGNITE-843 Use SyntaxHighlighter from CDN.

--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -24,8 +24,8 @@ append scripts
     script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
         
 append css
-    link(rel='stylesheet', href='/stylesheets/shCore.css')
-    link(rel='stylesheet', href='/stylesheets/shThemeMidnight.css')
+    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.css')
+    link(rel='stylesheet', href='http://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeMidnight.css')
         
 block content
     .docs-header
