--- a/modules/webconfig/nodejs/views/persistence.jade
+++ b/modules/webconfig/nodejs/views/persistence.jade
@@ -21,6 +21,9 @@ append scripts
 
 include includes/controls
 
+mixin dbcheck(chk, clk)
+    input(type='checkbox' ng-checked=chk ng-click=clk)
+
 block content
     .docs-header
         h1 Persistence
@@ -49,22 +52,22 @@ block content
             table.table-bordered.table-condensed.col-sm-12(st-table='data.tables')
                 thead
                     tr
-                        th Schema/Table
+                        th.col-sm-3 Schema/Table
                         th Key class
                         th Value class
                 tbody
                     tr(ng-repeat='row in data.tables')
                         td
-                            input(type='checkbox' ng-if='!row.tableName' ng-checked='row.use' ng-click='data.curTableIdx = -1')
-                            a(ng-if='!row.tableName' style='margin-left: 5px' ng-click='data.curTableIdx = -1') {{row.schemaName}}
-                            input(type='checkbox' ng-if='row.tableName' style='margin-left: 10px' ng-checked = 'row.use' ng-click='data.curTableIdx = $index')
-                            a(ng-if='row.tableName' style='margin-left: 5px' ng-click='data.curTableIdx = $index') {{row.tableName}}
+                            input(type='checkbox' ng-if='!row.tableName' ng-checked='row.use' ng-click='selectTable(-1)')
+                            a(ng-if='!row.tableName' style='margin-left: 5px' ng-click='selectTable(-1)') {{row.schemaName}}
+                            input(type='checkbox' ng-if='row.tableName' style='margin-left: 10px' ng-checked = 'row.use' ng-click='selectTable($index)')
+                            a(ng-if='row.tableName' style='margin-left: 5px' ng-click='selectTable($index)') {{row.tableName}}
                         td
-                            a(ng-show='data.curTableIdx != $index' ng-click='data.curTableIdx = $index; curKeyClass = data.tables[$index].keyClass') {{row.keyClass}}
-                            input(type='text' ng-show='data.curTableIdx == $index' ng-model='curKeyClass' placeholder='Key class full name')
+                            a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.keyClass}}
+                            input(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curKeyClass' placeholder='Key class full name')
                         td
-                            a(ng-show='data.curTableIdx != $index' ng-click='data.curTableIdx = $index; curValueClass = data.tables[$index].valueClass') {{row.valueClass}}
-                            input(type='text' ng-show='data.curTableIdx == $index' ng-model='curValueClass' placeholder='Value class full name')
+                            a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.valueClass}}
+                            input(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curValueClass' placeholder='Value class full name')
         .links(ng-hide='data.curTableIdx < 0')
             table.table-bordered.table-condensed.col-sm-12(st-table='data.tables[data.curTableIdx].fields')
                 thead
@@ -78,24 +81,24 @@ block content
                         th.col-sm-2 Java Type
                 tbody
                     tr(ng-repeat='row in data.tables[data.curTableIdx].fields')
-                        td.col-sm-1
-                            input(type='checkbox' ng-checked='row.use')
-                        td.col-sm-1
-                            input(type='checkbox' ng-checked='row.key')
-                        td.col-sm-1
-                            input(type='checkbox' ng-checked='row.ak')
-                        td.col-sm-2
-                            a(ng-click='data.curFieldIdx = $index') {{row.dbName}}
-                        td.col-sm-2
-                            a {{row.dbType}}
-                        td.col-sm-2
-                            a(ng-show='data.curFieldIdx != $index' ng-click='data.curFieldIdx = $index; curJavaName = data.tables[data.curTableIdx].fields[$index].javaName') {{row.javaName}}
-                            input(type='text' ng-show='data.curFieldIdx == $index' ng-model='curJavaName' placeholder='Field Java name')
-                        td.col-sm-2
-                            a(ng-show='data.curFieldIdx != $index' ng-click='data.curFieldIdx = $index; curJavaType = data.tables[data.curTableIdx].fields[$index].javaType') {{row.javaType}}
-                            input(type='text' ng-show='data.curFieldIdx == $index' ng-model='curJavaType' placeholder='Field Java type')
-            button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
-            button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
-            button.btn.btn-primary.btn-second(ng-click='reloadMetadata()') Reload
+                        td
+                            +dbcheck('row.use', 'selectField($index)')
+                        td
+                            +dbcheck('row.key', 'selectField($index)')
+                        td
+                            +dbcheck('row.ak', 'selectField($index)')
+                        td
+                            a(ng-click='selectField($index)') {{row.dbName}}
+                        td
+                            a(ng-click='selectField($index)') {{row.dbType}}
+                        td
+                            a(ng-show='data.curFieldIdx != $index' ng-click='selectField($index)') {{row.javaName}}
+                            input(type='text' ng-show='data.curFieldIdx == $index' ng-model='data.curJavaName' placeholder='Field Java name')
+                        td
+                            a(ng-show='data.curFieldIdx != $index' ng-click='selectField($index)') {{row.javaType}}
+                            input(type='text' ng-show='data.curFieldIdx == $index' ng-model='data.curJavaType' placeholder='Field Java type')
+        button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
+        button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
+        button.btn.btn-primary.btn-second(ng-click='reloadMetadata()') Reload
 
 
