--- a/modules/webconfig/nodejs/views/summary.jade
+++ b/modules/webconfig/nodejs/views/summary.jade
@@ -49,11 +49,17 @@ block content
             #cfgResult.configBox(ng-show='currCluster && !generateError && !loading', style='margin-top: 20px')
                 ul.nav.nav-tabs
                     li(ng-class='{active: cfgLang=="xml"}')
-                        a(href, ng-click='cfgLang = "xml"') XML
+                        a(href, ng-click='cfgLang = "xml"')
+                            img(src='images/xml.png', width='16px' height='16px')
+                            |  XML
                     li(ng-class='{active: cfgLang=="java"}')
-                        a(href, ng-click='cfgLang = "java"') Java
+                        a(href, ng-click='cfgLang = "java"')
+                            img(src='images/java.png', width='16px' height='16px')
+                            |  Java
                     li(ng-class="{active: cfgLang=='docker'}")
-                        a(href, ng-click='cfgLang = "docker"') Dockerfile
+                        a(href, ng-click='cfgLang = "docker"')
+                            img(src='images/docker.png', width='16px' height='16px')
+                            |  Dockerfile
 
                 div(style='padding-top: 10px')        
                     #xmlResult(ng-show="cfgLang == 'xml'")
